link button added

--- a/index.html
+++ b/index.html
@@ -6,10 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aeid portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" </head>
 
     <body>
+        <section>
+            <div class="half-width">
+                <h1>Skip The Diet</h1>
+                <h1>Just Eat Healty</h1>
 
+                <h1>With <span class="orange-color">Food Network</span></h1>
+                <p>Imagine you don't need a diet because we provide healthy and delisious food for you</p>
+                <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">order now</a>
+            </div>
+            <div class="half-width">
+                <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png" </div>
+        </section>
     </body>
 
 </html>
