--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" </head>
 
     <body>
-        <section>
+        <section class="flexible-container">
             <div class="half-width">
                 <h1>Skip The Diet</h1>
                 <h1>Just Eat Healty</h1>
@@ -20,10 +20,60 @@
                 <h1>With <span class="orange-color">Food Network</span></h1>
                 <p>Imagine you don't need a diet because we provide healthy and delisious food for you</p>
                 <a class="link-button" target="_blank" href="https://www.linkedin.com/company/programminghero/">order now</a>
+
             </div>
             <div class="half-width">
                 <img src="images/male/31602633-happy-man-with-unhealthy-burger-sandwich-in-hand-get-ready-to-eat-isolated-on-a-white-background-fas-removebg-preview.png" </div>
         </section>
+        <section class="About flexible-container">
+            <div class="aj">
+                <img src="images/male/guy-eats-hot-dog-which-himself-has-prepared-street-food-young-man-blue-shirt-eats-hot-dog-white-background-100449486-removebg-preview.png" alt=""></div>
+            <div class="half-width">
+                <div class="ak">
+                    <h1>About our shop</h1>
+                    <p>Food network has some pretty cool and different recipes, that look delicious! Aside from that, you can purchase their products like cookware, bake ware and utensils in vibrant color choices.
+                    </p>
+                    <a class="link-button" target="blank" href=" https://www.linkedin.com/company/programminghero/">contact me</a>
+
+                </div>
+        </section>
+        <section>
+            <div>
+                <h3 align="center">My Recipies</h3>
+
+                <p align="center">NC that brings professional chefs to your home to prepare delicious, customized meals. It's a fresh, clean site that feels honest and dependable by incorporating bright backgrounds and friendly imagery. "
+            </div>
+            <div class="flexible-container">
+                <div class="Recipie">
+                    <div>
+                        <img src="images/food/Project Cover2.png">
+                    </div>
+
+                    <h3>Recipie title</h3>
+                    <p>The Best Home and Kitchen Sales We’re Shopping This Week </p>
+
+                </div>
+                <div class="Recipie">
+                    <div>
+                        <img src="images/food/Project Cover.jpg">
+                    </div>
+
+                    <h3>Recipie title</h3>
+                    <P>Air-Fryer Scottish Shortbread </P>
+                </div>
+                <div class="Recipie">
+                    <div>
+                        <img src="images/food/Project Cover6.png" </div>
+                        <h3>Recipie title</h3>
+                        <P>Air-Fryer French Toast Sticks</P>
+                    </div>
+
+                </div>
+        </section>
+        <footer class="pk">
+            <h3 align="center"><span class="iq">Food</span> Network</h3>
+            <p align="center">Eat healty to live healty.Live healthy to live happy</p>
+        </footer>
     </body>
 
 </html>
